--- a/example.ipynb
+++ b/example.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is aimed to minimize the below function\n",
+    "It is aimed to minimize the function below\n",
     "\n",
     "$$f(x_1, x_2, x_3) = x_1^2 + 2x_2^2 + 3x_3^2 + x_1x_2 + x_2x_3 - 8x_1 - 16x_2 - 32x_3 + 110$$\n",
     "\n",
